// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combine demo -- combine 1`] = `
.c25 {
  position: relative;
}

.c25 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  vertical-align: bottom;
  display: inline-block;
  margin-left: 12px;
}

.c25 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c25 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c25 > .c24 {
  display: inline-block;
}

.c12 {
  vertical-align: baseline;
}

.c28 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c28:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c9 .c10 {
  color: #c3cad9;
}

.c9:hover {
  color: #0a1633;
}

.c9:hover .c10 {
  color: #3357df;
}

.c13 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c13 .c10 {
  color: #c3cad9;
}

.c13 .c10 {
  color: #3860f4;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-bxivhb {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-bxivhb:last-child {
  margin-right: 0;
}

.c7 .c33 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c33:last-child {
  margin-right: 0;
}

.c7 .c34+.c34 {
  margin-left: -1px;
}

.c7 .c32 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c32:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c32:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c31 {
  display: table;
  width: 100%;
}

.c30 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c30 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c30 input,
.c30 input:hover,
.c30 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c30:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c30 input {
  line-height: 26px;
  height: 26px;
}

.c30 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c30 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c30 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c30 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c27 {
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.c29 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c26 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3357df;
}

.c14:hover .c20 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c14 .c20 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        spacing
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c10 c11 c12"
            />
            smart
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            compact
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            sm
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="uc-fe-icon icon__cbox c10 c11 c12"
            />
            lg
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c24 uc-fe-combine c25"
      spacing="md"
    >
      <div
        class="uc-fe-combine-controller c26"
      >
        <div>
          <button
            class="c27 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c28"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down c29 c12"
            />
          </button>
        </div>
      </div>
      <span
        class="uc-fe-combine-controller uc-fe-input c30"
      >
        <span
          class="c31"
        >
          <input />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Combine demo -- demo 1`] = `
.c1 {
  position: relative;
}

.c1 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  vertical-align: bottom;
  display: inline-block;
  margin-left: 12px;
}

.c1 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c1 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c1 > .c0 {
  display: inline-block;
}

.c2 {
  position: relative;
}

.c2 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  vertical-align: bottom;
  display: inline-block;
  margin-left: -1px;
}

.c2 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c2 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c2 > .c0 {
  display: inline-block;
}

.c7 {
  vertical-align: baseline;
}

.c5 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c5:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c10 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c10:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c11 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c11:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c11.c11 {
  border-color: #d9d9d9;
  background: #f7f7f7;
  color: #cccccc;
  cursor: not-allowed;
  border-width: 1px;
  border-style: solid;
  box-shadow: none;
}

.c13 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c12 {
  padding-right: 8px;
}

.c14 {
  cursor: pointer;
}

.c9 {
  display: table;
  width: 100%;
}

.c8 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c8 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c8 input,
.c8 input:hover,
.c8 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c8:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c8 input {
  line-height: 26px;
  height: 26px;
}

.c8 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c4 {
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.c6 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c3 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

<div>
  <h3>
    组合
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-combine c1"
      spacing="md"
    >
      <div
        class="uc-fe-combine-controller c0 uc-fe-combine c2"
        spacing="compact"
      >
        <div
          class="uc-fe-combine-controller c3"
        >
          <div>
            <button
              class="c4 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c5"
              type="button"
            >
              <div>
                请选择
              </div>
              <i
                class="uc-fe-icon icon__down c6 c7"
              />
            </button>
          </div>
        </div>
        <span
          class="uc-fe-combine-controller uc-fe-input c8"
        >
          <span
            class="c9"
          >
            <input />
          </span>
        </span>
      </div>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c10"
        type="button"
      >
        按钮
      </button>
    </div>
  </div>
  <h3>
    按钮组
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-combine c1"
      spacing="md"
    >
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c10"
        type="button"
      >
        按钮组展示
      </button>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c5"
        type="button"
      >
        按钮组展示
      </button>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c5"
        type="button"
      >
        按钮组展示
      </button>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-disabled c11"
        disabled=""
        type="button"
      >
        按钮组展示
      </button>
    </div>
  </div>
  <h3>
    工具栏
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-combine c1"
      spacing="md"
    >
      <span
        class="uc-fe-combine-controller uc-fe-input c8"
      >
        <span
          class="c9"
        >
          <input />
          <span
            class="c12 c13"
          >
            <i
              class="uc-fe-icon icon__search c14 c7"
            />
          </span>
        </span>
      </span>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c5"
        type="button"
      >
        <i
          class="uc-fe-icon icon__repeat uc-fe-button-icon c7"
        />
      </button>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c5"
        type="button"
      >
        <i
          class="uc-fe-icon icon__cog uc-fe-button-icon c7"
        />
      </button>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c5"
        type="button"
      >
        <i
          class="uc-fe-icon icon__cloud-download uc-fe-button-icon c7"
        />
      </button>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c5"
        type="button"
      >
        按钮
      </button>
    </div>
  </div>
</div>
`;

exports[`Combine demo -- sharedProps 1`] = `
.c9 {
  position: relative;
}

.c9 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  vertical-align: bottom;
  display: inline-block;
  margin-left: 12px;
}

.c9 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c9 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c9 > .c0 {
  display: inline-block;
}

.c12 > .c0 {
  display: inline-block;
}

.c1 {
  position: relative;
}

.c1 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  vertical-align: bottom;
  display: inline-block;
  margin-left: 8px;
}

.c1 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c1 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c1 > .c0 {
  display: inline-block;
}

.c6 {
  vertical-align: baseline;
}

.c10 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c10:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c4:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c8 {
  display: table;
  width: 100%;
}

.c11 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c11 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c11 input,
.c11 input:hover,
.c11 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c11:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c11 input {
  line-height: 26px;
  height: 26px;
}

.c11 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c11 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c11 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c11 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c7 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c7 input,
.c7 input:hover,
.c7 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c7:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c7 input {
  line-height: 22px;
  height: 22px;
}

.c7 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c3 {
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.c5 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-combine c1"
      spacing="sm"
    >
      <div
        class="uc-fe-combine-controller c2"
      >
        <div>
          <button
            class="c3 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border c4"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down c5 c6"
            />
          </button>
        </div>
      </div>
      <span
        class="uc-fe-combine-controller uc-fe-input c7"
      >
        <span
          class="c8"
        >
          <input />
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-combine c9"
      spacing="md"
    >
      <div
        class="uc-fe-combine-controller test_cls c2"
      >
        <div>
          <button
            class="c3 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c10"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down c5 c6"
            />
          </button>
        </div>
      </div>
      <span
        class="uc-fe-combine-controller test_cls uc-fe-input c11"
      >
        <span
          class="c8"
        >
          <input />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Combine demo -- spacing 1`] = `
.c1 {
  position: relative;
}

.c1 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  vertical-align: bottom;
  display: inline-block;
  margin-left: 12px;
}

.c1 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c1 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c1 > .c0 {
  display: inline-block;
}

.c10 {
  position: relative;
}

.c10 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  vertical-align: bottom;
  display: inline-block;
  margin-left: -1px;
}

.c10 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c10 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c10 > .c0 {
  display: inline-block;
}

.c5 {
  position: relative;
}

.c5 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  vertical-align: bottom;
  display: inline-block;
  margin-left: 8px;
}

.c5 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c5 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c5 > .c0 {
  display: inline-block;
}

.c16 {
  position: relative;
}

.c16 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  vertical-align: bottom;
  display: inline-block;
  margin-left: 40px;
}

.c16 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c16 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c16 > .c0 {
  display: inline-block;
}

.c15 {
  vertical-align: baseline;
}

.c13 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c13:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c4:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c7 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c7:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c9 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  padding: 0 12px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c9:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c3 {
  display: table;
  width: 100%;
}

.c2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c2 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c2 input,
.c2 input:hover,
.c2 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c2:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c2 input {
  line-height: 26px;
  height: 26px;
}

.c2 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c6 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c6 input,
.c6 input:hover,
.c6 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c6:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c6 input {
  line-height: 22px;
  height: 22px;
}

.c6 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 32px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c8 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c8 input,
.c8 input:hover,
.c8 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c8:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c8 input {
  line-height: 30px;
  height: 30px;
}

.c8 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c8 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c12 {
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.c14 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c11 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

<div>
  <div>
    <h3>
      spacing: smart
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="c0 uc-fe-combine c1"
        spacing="md"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c2"
        >
          <span
            class="c3"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c4"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: smart - sm
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="c0 uc-fe-combine c5"
        spacing="sm"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c6"
        >
          <span
            class="c3"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-primary c7"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: smart - md
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="c0 uc-fe-combine c1"
        spacing="md"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c2"
        >
          <span
            class="c3"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c4"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: smart - lg
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="c0 uc-fe-combine c1"
        spacing="lg"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c8"
        >
          <span
            class="c3"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-primary c9"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: sm
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="c0 uc-fe-combine c5"
        spacing="sm"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c2"
        >
          <span
            class="c3"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c4"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: md
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="c0 uc-fe-combine c1"
        spacing="md"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c2"
        >
          <span
            class="c3"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c4"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: lg
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="c0 uc-fe-combine c1"
        spacing="lg"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c2"
        >
          <span
            class="c3"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c4"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <h3>
    spacing: compact
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-combine c10"
      spacing="compact"
    >
      <div
        class="uc-fe-combine-controller c11"
      >
        <div>
          <button
            class="c12 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c13"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down c14 c15"
            />
          </button>
        </div>
      </div>
      <span
        class="uc-fe-combine-controller uc-fe-input c2"
      >
        <span
          class="c3"
        >
          <input />
        </span>
      </span>
    </div>
  </div>
  <h3>
    spacing: custom
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="c0 uc-fe-combine c16"
      spacing="40px"
    >
      <span
        class="uc-fe-combine-controller uc-fe-input c2"
      >
        <span
          class="c3"
        >
          <input />
        </span>
      </span>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c4"
        type="button"
      >
        按钮
      </button>
    </div>
  </div>
</div>
`;
